fix<textBubble>: correct left align

--- a/components/TextBubble/textBubble.module.css
+++ b/components/TextBubble/textBubble.module.css
@@ -12,7 +12,7 @@
 .symbol {
   position: absolute;
   top: -6px;
-  left: 0;
+  left: -1px;
   border: 1px dashed #fffbf2;
   background: var(--black);
   border-radius: 5px;
